--- a/wiki/BrainRNASeqData.wiki
+++ b/wiki/BrainRNASeqData.wiki
@@ -1,7 +1,7 @@
 We are building the pipeline with PerM to deal with the RNA-seq data and estimate the expression level of each gene/isoform. 
- # The transcripts isoform are enumerated using the known and detect splicing junctions, with certain heuristic isoform scoring scheme adopted from [http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/ AceView] data base. 
+ # The putative transcripts are enumerated with the known and detected splicing junctions, using similar scoring scheme adopted from [http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/ AceView] data base. 
  # The RNA-seq reads are mapped to the enumerated transcripts. 
- # The mapping results are sent to Dr. Xiting Yan's *TranSEQ* program (unpublished) for  expression level's estimation.
+ # The mapping results are sent to *TranSEQ* program, Dr. Xiting Yan's (unpublished) program for expression level's estimation.
 
 The preliminary [http://dw408k-1.cmb.usc.edu:8080/Gene_List.htm result] can be browsed on the UCSC genome browser. 
 
