Edited wiki page through web user interface.

--- a/wiki/BrainRNASeqData.wiki
+++ b/wiki/BrainRNASeqData.wiki
@@ -1,8 +1,8 @@
 We are building the pipeline with PerM to deal with the RNA-seq data and estimate the expression level of each gene/isoform. 
  # The putative transcripts are enumerated from the region with coverage and  the known and detected splicing junctions.
- # These isoforms are filetered by similar scoring scheme adopted from the [http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/ AceView] data base.  
+ # These transcript are filtered by similar scoring scheme adopted from the [http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/ AceView] data base.  
  # The RNA-seq reads are mapped to the enumerated transcripts. 
- # The mapping results are sent to *TranSEQ* program, Dr. Xiting Yan's (unpublished) program for expression level's estimation.
+ # The mapping results are sent to *TranSEQ* program, Dr. Xiting Yan's (unpublished) program for expression levels estimation.
 
 The preliminary [http://dw408k-1.cmb.usc.edu:8080/Gene_List.htm result] can be browsed on the UCSC genome browser. 
 
