--- a/wiki/BrainRNASeqData.wiki
+++ b/wiki/BrainRNASeqData.wiki
@@ -11,6 +11,7 @@ The preliminary [http://dw408k-1.cmb.usc.edu:8080/Gene_List.htm result] can be b
  * Switch the reference to hg18 by clicking the {{{Convert}}} button on the top tool bar and choosing the {{{New Assembly}}} to {{{Mar.2006}}} 
  * Go back to gene list page and click the selected {{{Isoforms}}} of the gene to see the transcripts we enumerated. 
  * Copy the isoform sequence and [http://genome.ucsc.edu/cgi-bin/hgBlat?hgsid=148468955 BLAT] it on the genome browser to see it with the mapped reads signal.
- * On the isoform ID, we attached the expression proportion and the expressed log likelihood. The log likelihood shows the confidence that the transcript is expressed. Inf log likelihood indicates there are reads uniquely mapped to the isoform.
+ * The expressed proportion and the expressed log likelihood of the transcripts are shown on the isoforms Id. 
+ * The log likelihood shows the confidence that the transcript is expressed. Inf log likelihood indicates there are reads uniquely mapped to the isoform.
  * The result can be compared with the [http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/ AceView]'s transcripts by [http://genome.ucsc.edu/cgi-bin/hgBlat?hgsid=148468955 BLAT]ing the result together.
  * The result of nucleotide sequence and the amino sequence should be [http://genome.ucsc.edu/cgi-bin/hgBlat?hgsid=148468955 BLAT] separately.  
