--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -50,3 +50,8 @@ cat reads.csfasta | tr '\n' '\t' | tr '>' '\n' | sort -k 1,1 | tr '\n' '>' | tr 
 cat reads.qual | tr '\n' '\t' | tr '>' '\n' | sort -k 1,1 | tr '\n' '>' | tr '\t' '\n'
 }}}
 Remember to backup your read file before any experiment. Unfortunately, I met many quality files that are embedded extra info in the read name.. ex: >readName,blah,blah.. so you need to use `sed' command to remove the blah blah ... first.
+=== Q5 How if my reference is a exon which is shorter than a read? ===
+That is fine. Internally, PerM use 'N' to separate each reference. No reads will mapped 
+across 'N' on the short reference. 
+=== Q6 How if I have multiple reference with the same reference name? ===  
+PerM barks by listing the error messages to warn you. Internally, PerM still map them to each reference separately. However the output will print the same reference name, and the index of the reference will be mess up. 
