--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -59,5 +59,5 @@ across 'N' on the short reference.
 === Q7 How if I have multiple reference with the same reference name? ===  
 PerM barks by listing the error messages to warn you. Internally, PerM still map them to each reference separately. However the output will print the same reference name, and the index of the reference will be mess up. 
 
-=== Q8 Do I need to build the index first and than do the mapping ===
+=== Q8 Should I save the index first and then do the mapping ===
 Its up to you. If you don't need to do the mapping again, the default won't save the index. I test building hg18 index with 16 CPU for PerM, it takes half an hour. You may think it is not a big deal compared to storing a 14GB index file. Be careful if you change the reference, delete or rebuild the index to avoid confusion.
