--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -12,7 +12,7 @@ It depends on your read length and the error rates. `--seed` option decides diff
 
 === Q3 Will seed F3 or seed F4 increase running time by a lot? ===
 For transcriptom or small genome with long read (50bp) don't need to worry about speed. 
-Speed is a concern when the reference has a lot of repeat while reads are short so they randomly mapped to a lot of places. PerM actually reach *40M* 50bp reads per hour even to hg18, with F3 seed. For F4 seed, it reaches about *1~2M* reads per hours for entire genome, depending on whether the reads are from more repetitive regions. Let me know if the speed is lower than that. 
+Speed is a concern when the reference has a lot of repeat while reads are short so they randomly mapped to a lot of places. PerM actually reach *40M* 50bp reads per hour even to hg18, with F3 seed. For F4 seed, it reaches about *2M* reads per hours for entire genome, depending on whether the reads are from more repetitive regions. Let me know if the speed is lower than that. The speed of your disk read/write could be the bottleneck.
 
 === Q4 Do you have a script to summarize how many reads are mapped to a ref ===
 You can use SAMTOOLS or other visualization to see the coverage. To summarize the reads per gene, for example:
