--- a/wiki/Compile.wiki
+++ b/wiki/Compile.wiki
@@ -1,6 +1,5 @@
 #labels Phase-Deploy
-PerM has been compiled in Red Hat (32bits and 64 bits) and Windows XP (32 bit), Windows 7 (64bit), with gcc 3.0, gcc 4.3 and Visual C++. Try the compiled executable in the download section. 
-Please email "yanghoch at usc.edu", if you encounter any problems or have any suggestion.
+Try if you can find the compiled executable in the download section. PerM has been compiled in Red Hat (32bits and 64 bits) and Windows XP (32 bit), Windows 7 (64bit), with gcc 3.0, gcc 4.3 and Visual C++. It has also been compiled on Mac Darwin Kernal 9.8, but haven't been tried with OpenMP. Please email "yanghoch at usc.edu", if you encounter any problems or have any suggestion.
 
 To unzip the source code that you download on Linux, type {{{unzip ./Source_Code_PerM_0.2.0.zip}}} in the directory with the download. For gcc + Linux, type make in the unzip directory to generate the execute file PerM. Note, the attached makefile is for Linux with gcc 4.3 or later. Type gcc -v to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no OpenMP) which removed the flag "-fopenmp", and only single CPU will be utilized. 
 
