--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -67,3 +67,6 @@ Unfortunately, PerM's index is for fixed read length. It use the first read leng
 
 === Q10 I set up a same twice with different value in my command line. Which arg that PerM will use? ===
 Ex: if you set -v 5 -v 3. It will take the first arg. If you have more concern, fixed the arg and run it again.
+
+
+[http://code.google.com/p/perm/wiki/Manual Back to manual]
